--- a/app/src/index.html
+++ b/app/src/index.html
@@ -15,22 +15,27 @@
       <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
-    <main>
+    <div class="view-box">
       <div>
-      <div class="hex-grid standing cell-home">
+      <main class="cell-home">
         {{#each cells}}
         <div class="hex-cell"><div class="hex-offset">
           <svg width="100%" viewBox="0 0 477 551" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <polygon class="cell-bg" points="238.5 1 476.223973 138.25 476.223973 412.75 238.5 550 0.7760267 412.75 0.7760267 138.25"></polygon>
-            <text class="title font-family="Calibri" font-size="65" font-weight="normal" fill="#FFFFFF">
-              <tspan x="168.882568" y="288">{{this.ger}}</tspan>
-            </text>
+            <text x="238.5" y="288" text-anchor="middle" class="title" font-family="Calibri" font-size="65" font-weight="normal" fill="#FFFFFF">{{this.ger}}</text>
           </svg>
         </div></div>
         {{/each}}
-      </div></div>
+      </main></div>
       
-    </main>
+    </div>
+
+    <script>
+    window.addEventListener("hashchange", function(event){
+      document.querySelector("main").className = location.hash.substring(1);
+    }, false);
+    document.querySelector("main").className = location.hash.substring(1);
+    </script>
 <!--     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
