--- a/app/src/index.html
+++ b/app/src/index.html
@@ -20,10 +20,12 @@
       <main class="cell-home">
         {{#each cells}}
         <div class="hex-cell"><div class="hex-offset">
+          {{#if file}}
           <svg width="100%" viewBox="0 0 477 551" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <polygon class="cell-bg" points="238.5 1 476.223973 138.25 476.223973 412.75 238.5 550 0.7760267 412.75 0.7760267 138.25"></polygon>
             <text x="238.5" y="288" text-anchor="middle" class="title" font-family="Calibri" font-size="65" font-weight="normal" fill="#FFFFFF">{{this.ger}}</text>
           </svg>
+          {{/if}}
         </div></div>
         {{/each}}
       </main></div>
