--- a/app/src/index.html
+++ b/app/src/index.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
+    <a href="#" class="home"><i class="icon locity"></i></a>
     <div class="view-box">
       <div>
       <main class="cell-home">
@@ -25,6 +26,17 @@
             <polygon class="cell-bg" points="238.5 1 476.223973 138.25 476.223973 412.75 238.5 550 0.7760267 412.75 0.7760267 138.25"></polygon>
             <text x="238.5" y="288" text-anchor="middle" class="title" font-family="Calibri" font-size="65" font-weight="normal" fill="#FFFFFF">{{this.ger}}</text>
           </svg>
+          <section>
+            <a href="#cell-1">Cell 1</a>
+            <a href="#cell-2">Cell 2</a>
+            <a href="#cell-3">Cell 3</a>
+            <a href="#cell-4">Cell 4</a>
+            <a href="#cell-5">Cell 5</a>
+            <a href="#cell-6">Cell 6</a>
+            <a href="#cell-7">Cell 7</a>
+            <a href="#cell-8">Cell 8</a>
+            <a href="#cell-9">Cell 9</a>
+          </section>
           {{/if}}
         </div></div>
         {{/each}}
