Better scrolling on mobile.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -15,7 +15,8 @@
       <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
-    <a href="#" class="home"><i class="icon locity"></i></a>
+    <a href="#" class="brand"><i class="icon locity"></i><h1>Locity</h1></a>
+    <div class="view-box-wrapper">
     <div class="view-box">
       <div>
       <main class="cell-home">
@@ -42,7 +43,7 @@
         {{/each}}
       </main></div>
       
-    </div>
+    </div></div>
 
     <script>
     var changeHash = function(cell) {
