Fix scrolling problems.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -18,7 +18,7 @@
     <a href="#" class="brand"><i class="icon locity"></i><h1>Locity</h1></a>
     <div class="view-box-wrapper">
     <div class="view-box">
-      <div>
+      <div><div>
       <main class="cell-home">
         {{#each cells}}
         <div class="hex-cell cell-{{file}}"><div class="hex-offset">
@@ -43,7 +43,7 @@
         {{/each}}
       </main></div>
       
-    </div></div>
+    </div></div></div>
 
     <script>
     var changeHash = function(cell) {
