Add cell opacity.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -105,6 +105,7 @@
       }else{
         document.querySelector(".cell-".concat(cell)).classList.add("active");
       }
+      // document.title = "Locity GmbH"
     };
     window.addEventListener("hashchange", function(event){
       changeHash(location.hash.substring(1));
