--- a/app/src/index.html
+++ b/app/src/index.html
@@ -11,7 +11,7 @@
       <link rel="mask-icon" href="assets/image/fav/safari-pinned-tab.svg" color="#5bbad5">
       <link rel="shortcut icon" href="assets/image/fav/favicon.ico">
       <meta name="msapplication-config" content="assets/image/fav/browserconfig.xml">
-      <meta name="theme-color" content="#ffffff">
+      <meta name="theme-color" content="#4671D5">
       <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
